--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,4 +13,10 @@
         android:layout_height="wrap_content"
         android:text="@string/btn_home_compute" />
 
+    <Button
+        android:id="@+id/btn_home_call"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/btn_call" />
+
 </LinearLayout>
