--- a/app/src/main/res/layout/compute_activity.xml
+++ b/app/src/main/res/layout/compute_activity.xml
@@ -39,7 +39,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:text="@string/btn_compute" />
+        android:text="@string/egal" />
 
     <TextView
         android:id="@+id/txt_result"
